log
Thu 25 Apr 2024 12:23:07 AM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|6
total_score: 10/70
b5db796
Thu 25 Apr 2024 12:28:38 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
1278acc
Thu 25 Apr 2024 12:28:45 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
336c327
Thu 25 Apr 2024 12:37:48 AM UTC: 
 hashmap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:53:67: error: implicit declaration of function ‘is_eqaul’; did you mean ‘is_equal’? [-Werror=implicit-function-declaration]
   53 |         if(map->buckets[i]!=NULL && map->buckets[i]->key!=NULL && is_eqaul(map->buckets[i]->key,key))
      |                                                                   ^~~~~~~~
      |                                                                   is_equal
cc1: all warnings being treated as errors
Compilation failed
025f9df
Thu 25 Apr 2024 12:38:07 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
2107d07
Thu 25 Apr 2024 12:39:46 AM UTC: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
test.c: In function ‘insertMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3e2ca4a
